# project-cass

./: .gitignore  .gitmodules  .~lock.DEPLOYMENT.md#  .~lock.THE_SCRIPTURES.md#  CLAUDE.md  DAEDALUS_LOG.md  DEPLOYMENT.md  DISCORD_ANNOUNCEMENT.md  GUESTBOOK.md  ICARUS_GUESTBOOK.md  LICENSE  Procfile  README.md  REFACTORING_ANALYSIS.md  STABILIZATION_POINT.md  STARTER_GUIDE.md  THESEUS_ANALYSIS_FOR_KOHL.md  THE_SCRIPTURES.md  WONDERLAND_ARCHITECTURE.md  WONDERLAND_EXPLORATION_LOG.md  WONDERLAND_INDEX.md  WONDERLAND_QUICK_REFERENCE.md  WONDERLAND_SESSION_MANIFEST.txt  cass_lesswrong_post.md  explore_palace.py  init_mind_palace.py  init_palace_keepers.py  pyrightconfig.json  railway.toml  requirements.txt  setup.sh  test_palace_navigation.py
.claude/: .gitignore  icarus-dialogue.md  icarus-seed.md
.daedalus/: decisions.md  lessons.md  notes.md  observations.json  session-summaries.md
.github/: FUNDING.yml
.mind-palace/: palace.yaml
admin-frontend/: package-lock.json  package.json  setup-service.sh  vite.config.ts
backend/: .coverage  .env.example  .env.template  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  TODO.md  activity_dashboard.py  admin_api.py  agent_client.py  attachments.py  auth.py  background_tasks.py  bootstrap_admin.py  (+98 more)
daedalus/: pyproject.toml
daedalus/docs/spec/: identity-seed.md
daedalus/src/daedalus/: __init__.py
daedalus/src/daedalus/bus/: __init__.py
daedalus/src/daedalus/cli/: __init__.py  commands.py  config.py  main.py
daedalus/src/daedalus/identity/: __init__.py  seed.py
daedalus/src/daedalus/templates/: __init__.py  injector.py
(+739 files in other folders)
