[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daedalus-cli"
version = "0.1.0"
description = "Software engineering paradigm with Icarus parallelization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Daedalus", email = "daedalus@cass-vessel.local"}
]
keywords = ["cli", "development", "parallelization", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
daedalus = "daedalus.cli.main:main"

[project.urls]
Homepage = "https://github.com/KohlJary/project-cass"
Repository = "https://github.com/KohlJary/project-cass"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
daedalus = [
    "identity/data/*.md",
    "identity/data/agents/*.md",
    "templates/data/*.md"
]
